# trader-1

./: .gitignore  LICENSE.md  README.md  main.py  requirements.txt  runtime_config.py  ta_lib-0.6.8-cp314-cp314-win_amd64.whl  trader.code-workspace
ctp_native/: __init__.py  bus.py  gateway.py  state_store.py
dashboard/: settings.py
dashboard/static/js/: status.js
dashboard/templates/global/: base_site.html
dashboard/templates/panel/: correlation.html
native/ctp_bridge/: CMakeLists.txt  README.md
native/ctp_bridge/api/win/: DataCollect.h
native/ctp_bridge/scripts/: build_native_bridge.ps1  sync_thost_api.ps1
native/ctp_bridge/src/: py_module.cpp
panel/: const.py  models.py  views.py
panel/migrations/: 0001_initial.py  0004_auto_20211213_1548.py
strategy/: __init__.py  base_strategy.py  brother2.py  kronos.py
test/: test.py
trader/: main.py
trader/strategy/: brother2.py
trader/utils/: __init__.py  fetch_data.py
utils/: __init__.py  fetch_data.py  my_logger.py  read_config.py
